--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>这是一个简单的段落。</p>
 	    <!-- 一个简单的按钮 -->
     <button>点击我</button>
+	<button>Test1</button>
+	<button>Test2</button>
 </body>
 </html>
