--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>欢迎来到我的网站</h1>
     <p>这是一个简单的段落。</p>
 	    <!-- 一个简单的按钮 -->
-    <button>点击我</button>
+    <button>点击</button>
 </body>
 </html>
