--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF - 8">
     <meta name="viewport" content="width=device-width, initial - scale=1.0">
     <title>我的简单网站</title>
+	<style>
+        /* 为 buttonClass 类的按钮设置样式 */
+      .buttonClass {
+            background-color: #4CAF50; /* 背景颜色 */
+            border: none; /* 无边框 */
+            color: white; /* 文本颜色 */
+            padding: 15px 32px; /* 内边距 */
+            text-align: center; /* 文本居中 */
+            text-decoration: none; /* 无下划线 */
+            display: inline-block; /* 显示为内联块元素 */
+            font-size: 16px; /* 字体大小 */
+            margin: 4px 2px; /* 外边距 */
+            cursor: pointer; /* 鼠标悬停时显示为手型 */
+        }
+    </style>
 </head>
 <body>
     <h1>欢迎来到我的网站</h1>
     <p>这是一个简单的段落。</p>
 	    <!-- 一个简单的按钮 -->
-    <button>点击</button>
+    <button class="buttonClass">点击</button>
 </body>
 </html>
