--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </style>
     <script>
         function sendSignal() {
+		    alert("按钮点击！");
             fetch('http://your-external-server.com/send_signal_to_ue', {
                 method: 'POST',
                 headers: {
